# encounter-service

./: .gitignore  CMakeLists.txt  README.md  TESTING.md
scripts/: check.sh  smoke.sh
src/: main.cpp
src/domain/: audit_models.h  encounter_models.h  encounter_service.cpp  encounter_service.h  errors.h
src/http/: auth.cpp  auth.h  error_mapper.cpp  error_mapper.h  httplib_compat.h  routes.cpp  routes.h  validation.cpp  validation.h
src/storage/: audit_repo.h  encounter_repo.h  in_memory_audit_repo.cpp  in_memory_audit_repo.h  in_memory_encounter_repo.cpp  in_memory_encounter_repo.h
src/util/: clock.h  id_generator.h  json_compat.h  logger.cpp  logger.h  redaction.cpp  redaction.h  request_id.h  time.cpp  time.h
tests/: catch_compat.h  test_audit.cpp  test_auth.cpp  test_error_mapper.cpp  test_redaction.cpp  test_routes.cpp  test_storage_audit_repo.cpp  test_storage_encounter_repo.cpp  test_time.cpp  test_validation.cpp
